# splat-rs

./: .gitignore  Cargo.toml  build.rs  flake.nix
shaders/: splat.wgsl
src/: app.rs  camera.rs  gpu.rs  main.rs  ply.rs  radix_sort_cpu.rs  renderer.rs
