[package]
name = "splat-rs"
version = "0.1.0"
edition = "2024"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3


[dependencies]
wgpu = "29"
cubecl      = { git = "https://github.com/tracel-ai/cubecl", features = ["wgpu"] }
cubecl-wgpu = { git = "https://github.com/tracel-ai/cubecl" }
winit = "0.30.13"

egui.version = "0.34"
egui-wgpu.version = "0.34"
egui-winit.version = "0.34"
rerun = { version = "0.31", default-features = false, features = ["sdk"] }

bytemuck = "1.25"

tracing = "0.1.44"
tracing-subscriber = "0.3.23"
color-eyre = "0.6.5"

pollster = "0.4.0"
serde = { version = "1", features = ["derive"] }
serde-ply = "0.2.1"
glam = { version = "0.32.1", features = ["encase"] }
tap = "1.0.1"
rayon = "1.11.0"
seq-macro = "0.3.6"
# wgpu_edsl = { version = "0.1.0", path = "../../../../Dev/wgpu_edsl/crates/wgpu_edsl" }

[build-dependencies]
wgsl_bindgen = "0.22.2"
